applications/web-system/liatrio-demo/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liatrio-demo
spec:
  selector:
    matchLabels:
      app: liatrio-demo
  replicas: 2
  template:
    metadata:
      labels:
        app: liatrio-demo
    spec:
      containers:
      - name: liatrio-demo
        image: liatrio-demo
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "250m"
