applications/web-system/liatrio-demo/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liatrio-demo
spec:
  selector:
    app: liatrio-demo
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
